# sudoku-solver

./: .gitignore  LICENCE  README.md  main.py  pyproject.toml  requirements.txt  sudoku.py  tox.ini
.devcontainer/: devcontainer.json
samples/: reference
sudoku/: boardprinter.py  check.py  parser.py  solver.py
