[tool.poetry]
name = "sudoku-solver"
version = "1.0.0"
description = "Tool to solve Soduku"
authors = ["Simon Tallmyr <simon@tallmyr.se>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
blessings = "^1.7"

[tool.poetry.dev-dependencies]
black = {version = "^20.8b1", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
